src/test/test-models/good/keywords-increment-log-prob.stan
parameters {
  real increment_log_prob2;
}
model {
  increment_log_prob2 ~ normal(0,1);
}
