src/test/test-models/bad/reserved/dynamic_cast.stan
data {
  real dynamic_cast;
}
model {
}
